# sdgft

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/: AGENTS.md
papers/: build_all.py  jcappub.sty  paper01_axiomatic_foundations.tex  paper01_axiomatic_foundations_of_scale_dependent_geometric_field_theory.tex  paper02_24cell_topology.tex  paper02_topology_of_the_24_cell_and_f4_symmetries_in_quantum_field_theory.tex  paper03_six_cone_geometry.tex  paper03_six_cone_partition_of_the_three_sphere_and_flavour_projections.tex  paper04_banach_fixed_point.tex  paper04_effective_spectral_dimension_and_the_banach_fixed_point_theorem_in_sdgft.tex  paper05_gauge_group_origin_from_f4_dynkin_diagram_removal.tex  paper06_three_fermion_generations_from_z3_triality_of_the_d4_dynkin_diagram.tex  paper07_fine_structure_constant_from_spectral_volume_of_the_d*_sphere.tex  paper08_weinberg_angle_and_electroweak_rg_correction.tex  paper09_strong_coupling_alpha_sm_z_and_two_loop_renormalization_group_running.tex  paper10_conformal_higgs_mass_from_golden_ratio_and_lattice_capacity.tex  paper11_lepton_mass_hierarchies_and_the_geometric_coupling_constant.tex  paper12_pmns_neutrino_mixing_and_the_solar_isocurvature_cross_sector_identity.tex  paper13_ckm_quark_mixing_and_the_topological_jarlskog_invariant.tex  paper14_horndeski_parameters.tex  paper14_the_fr_=_r^67_48_gravitational_action_and_horndeski_eft_parameters.tex  paper15_dolgov_kawasaki.tex  paper15_dolgov_kawasaki_stability_and_scalaron_mass_in_fractional_gravity.tex  paper16_modified_schwarzschild.tex  paper17_inflation.tex  (+17 more)
(+75 files in other folders)
