[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdgft"
version = "2.0.0"
description = "Six-Dimensional Geometric Field Theory: pure theory derivations from two topological constants"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "David A. Besemer"},
]
keywords = ["physics", "cosmology", "particle-physics", "geometric-field-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "scipy>=1.10.0",
]
numerical = [
    "scipy>=1.10",
]
plots = [
    "matplotlib>=3.7",
]
plots-interactive = [
    "matplotlib>=3.7",
    "plotly>=5.0",
]
all = [
    "scipy>=1.10",
    "matplotlib>=3.7",
    "plotly>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sdgft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
